[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Elena Mikitenko <lenyska07@mail.ru>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main_brain_even"
brain-calc = "brain_games.scripts.brain_calc:main_brain_calc"
brain-gcd = "brain_games.scripts.brain_gcd:main_brain_gcd"
brain-progression = "brain_games.scripts.brain_progression:main_brain_progression"
brain-prime = "brain_games.scripts.brain_prime:main_brain_prime"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
